--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@americanexpress/react-seo": "^1.4.2",
     "@heroicons/react": "^2.0.18",
     "@risingstack/react-easy-state": "^6.3.0",
     "classnames": "^2.3.2",
